# new-site

./: .env.sample  Cargo.toml  docker-compose.yaml  readme.md
migrations/: 20250611234728_setup.sql  20250611234819_create_user_info_table.sql  20250611234819_create_user_table.sql  20250612224138_create_password_table.sql  20250612224138_create_user_password_table.sql  20250620052208_create_todo_table.sql
src/: app.rs  auth.rs  config.rs  lib.rs  main.rs
src/auth/: login.rs  logout.rs  mod.rs  register.rs
src/domain/: email_address.rs  mod.rs  password.rs  username.rs
src/routes/: health_check.rs  mod.rs  root.rs  user.rs
src/routes/todo/: mod.rs
templates/: base.html  root.html
templates/auth/: login.html  protected.html  register.html
templates/todo/: todos_template.html
tests/api/: app.rs  auth.rs  health_check.rs  helpers.rs  main.rs  user.rs
tests/api/user/: register.rs
