[package]
name = "site"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-login = "0.17.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
clap_derive = "4.5.40"
cookie = { version = "0.18.1", features = ["signed"] }
dotenvy = "0.15.7"
fred = "10.1.0"
icu = "2.0.0"
password-auth = "1.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "runtime-tokio-native-tls", "time", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-redis-store = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
